--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-                <img src="example.jpg" alt="Jazmyn Felicity">
+                <img src="example.jpg" alt="Victoria Orona">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
                 <div class='overlay'></div>
@@ -33,7 +33,7 @@
                 <div class="name1">
 
                 <!-- Replace the name below with your name -->
-                    Jazmyn Felicity
+                    Victoria Orona
                 <!-- Replace the name above with your name -->
 
                 </div>
